...
    <string name="push_notification_channel_reminders">"Reminders"</string>
    <string name="brushing_reminder_notification_body">"It's %s, time to brush your teeth!"</string>
    <string name="headspace_card_title">"Unlock a 60 day free trial of Headspace"</string>

    <!-- Fuzzy -->
    <string name="headspace_card_description">"Explore guided exercises, videos, and more to help you get healthier and happier. 10 Days of Headspace can increase happiness by 16%."</string>
    <string name="headspace_card_progress_to_unlock">"Earn %1$s more to unlock."</string>
    <string name="headspace_card_progress_points_to_unlock">"%1$s points"</string>
    <string name="headspace_card_unlock_button">"Unlock my code"</string>
    <string name="headspace_card_visit_headspace">"Visit headspace"</string>
    <string name="headspace_card_unlock_description">"The code will be valid for 30 days after unlocking."</string>
    <string name="headspace_card_tap_to_copy">"Tap to copy promo code: %1$s"</string>
    <string name="headspace_card_inprogress_description_highlight1">"healthier"</string>
    <string name="headspace_card_inprogress_description_highlight2">"happier"</string>
    <string name="smiles_history_amazon_account_linked">"Link my Amazon account"</string>
    <string name="headspace_card_unlocked_description">"Use the code below at registration to enjoy 60 days free trial. The code will be valid for 30 days after unlocking."</string>
    <string name="headspace_card_unlocked_description_highlight">"60 days free trial"</string>
    <string name="headspace_card_copied">"Copied to clipboard!"</string>
    <string name="guided_brushing_tips">"not used in CC"</string>
    <string name="guided_brushing_tips_highlight">"not used in CC"</string>
    <string name="headspace_card_unlock_error_no_codes">"Discount code not available, please try again later."</string>
    <string name="guided_brushing_tips_got_it_button">"not used in CC"</string>
    <string name="guided_brushing_tips_dont_show_again_button">"not used in CC"</string>
    <string name="headspace_close_confirm">"Card will never be shown again"</string>
...
