...
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:backgroundScrim="?colorPrimary"
      app:shadeExpandedHeight="@dimen/dot_oct" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/content_recyclerview"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:descendantFocusability="blocksDescendants"
      app:adapter="@{viewModel.cardHostViewModel.adapter}"
      app:diffConfig="@{viewModel.cardHostViewModel.diffConfig}"
      app:itemBinding="@{viewModel.cardHostViewModel.cardsBinding}"
...
